--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server",
     "start:dev": "VERBOSE=true nodemon server",
-    "build:dev": "webpack --mode development --watch",
+    "build:prod": "webpack --mode production",
+    "build:dev": "webpack --mode development --devtool source-map --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
