--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "express": "^4.16.3",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
+    "prop-types": "^15.6.1",
     "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react-dom": "^16.3.0",
+    "styled-components": "^3.2.5"
   }
 }
